<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_button_createaccount">únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Uriel Ramírez</string>
    <string name="firstword_card">Hace </string>
    <string name="timecard_card">4 días</string>
    <string name="likenumber_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">\"Desayunando con un amigo\"</string>
    <string name="lorem">Perturbar la meditación a medida de 90 neutra, planta de aire herencia Portland Pub pok pok. lomo affogato el blog pantalones cortos de jean selfies CRONUT, kufiyya polainas mumblecore fap scenester Pub restaurante. Calamar vestir arte de la calle maestro de limpiar, gentrify banjo tilde. Bigote locavore fingerstache fixie chicharrones Cray, umami despojos Austin es probable que no haya oído hablar de ellos.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
